@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2003/07/17 22:55:11 grant Exp $
+# $NetBSD: Makefile,v 1.12 2004/02/15 06:13:51 ben Exp $
 #
 
 DISTNAME=	flwm-1.00
+PKGREVISION=	1
 CATEGORIES=	x11 wm
 MASTER_SITES=	http://flwm.sourceforge.net/
 EXTRACT_SUFX=	.tgz
@@ -10,13 +11,13 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://flwm.sourceforge.net/
 COMMENT=	The Fast, Light Window Manager
 
-USE_BUILDLINK2=	# defined
-USE_X11BASE=	# defined
+USE_BUILDLINK3=	yes
+USE_X11=	# defined
 
 GNU_CONFIGURE=	# defined
 CONFIGURE_ENV+=	X_LIBS="-lGL"
 MAKE_ENV+=	CXXFLAGS="${CXXFLAGS}"
 CXXFLAGS+=	-DFLTK_1_0_COMPAT
 
-.include "../../x11/fltk/buildlink2.mk"
+.include "../../x11/fltk/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
