@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5560 2004/04/12 21:39:45 salo Exp $
+$NetBSD: CHANGES,v 1.5561 2004/04/12 22:27:19 seb Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1935,3 +1935,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated smokeping to 1.28 [kim 2004-04-12]
 	Updated ogmtools to 1.3 [salo 2004-04-12]
 	Added cvs2svn-0.0.0.916 [seb 2004-04-12]
+	Updated flwm to 1.0.0nb1 [xtraeme 2004-04-12]
